Added 'Stand with Ukraine' page

--- a/themes/kpumuk/layouts/partials/footer.html
+++ b/themes/kpumuk/layouts/partials/footer.html
@@ -1,5 +1,10 @@
 <footer>
   <div id="footer">
+    <div>
+      <a href="/stand-with-ukraine/">
+        <img src="/images/stand-with-ukraine.svg" width="100" height="100" alt="I stand with Ukraine">
+      </a>
+    </div>
     {{ $url := .RelPermalink }}<!---->
     {{ with $.Scratch.Get "social_list" }}
     <nav class="social">
