--- a/themes/kpumuk/layouts/partials/head.html
+++ b/themes/kpumuk/layouts/partials/head.html
@@ -17,10 +17,10 @@
 
   <!-- Styles & Scripts -->
   {{ $normalize_css := resources.Get "normalize.css" }}
-  <!---->
   {{ $theme_css := resources.Get "theme.css" }}
+  {{ $syntax_css := resources.Get "syntax.css" }}
   <!---->
-  {{ $css := slice $normalize_css $theme_css | resources.Concat "main.css" | minify }}
+  {{ $css := slice $normalize_css $theme_css $syntax_css | resources.Concat "main.css" | minify }}
   <link rel="preload stylesheet" as="style" href="{{ $css.Permalink }}" />
 
   {{ if and .IsPage (not site.Params.disableHLJS) }}
