--- a/themes/kpumuk/layouts/partials/sized-image.html
+++ b/themes/kpumuk/layouts/partials/sized-image.html
@@ -1,14 +1,13 @@
-{{ $image := . }}
 {{ $width := 1 }}
 {{ $height := 1 }}
-{{ if strings.HasSuffix . ".svg"}}
-    {{ $svgContent := $image.Content }}
+{{ if eq .MediaType.SubType "svg"}}
+    {{ $svgContent := .Content }}
     {{ $viewBoxSizes := split (index (split (index (split $svgContent `viewBox=`) 1) `"`) 1) ` ` }}
     {{ $width = float (index $viewBoxSizes 2) }}
     {{ $height = float (index $viewBoxSizes 3) }}
 {{ else }}
-    {{ $width = float $image.Width }}
-    {{ $height = float $image.Height }}
+    {{ $width = float .Width }}
+    {{ $height = float .Height }}
 {{ end }}
 
 {{ return (dict "Width" $width "Height" $height "HRatio" (div $height $width) "WRatio" (div $width $height)) }}
