Switch to using <object> for SVG embedding, as it solves scaling issue in Safary (blurry lines)

--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -337,6 +337,11 @@ figure > img {
   max-width: 100%;
 }
 
+figure > object {
+  margin: 0 auto;
+  max-width: 100%;
+}
+
 figure > figcaption {
   font-style: italic;
 }
