More code blocks follow the parent styling

--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -448,6 +448,11 @@ code {
 
 a > code {
   color: inherit;
+  text-decoration: inherit;
+}
+
+blockquote code {
+  font-style: inherit;
 }
 
 .highlight {
