--- a/themes/kpumuk/layouts/_default/baseof.html
+++ b/themes/kpumuk/layouts/_default/baseof.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 
-{{ $.Scratch.Delete "social_list" }}<!---->
-{{ $.Scratch.Delete "avatar_url" }}<!---->
+{{- $.Scratch.Delete "social_list" }}<!---->
+{{- $.Scratch.Delete "avatar_url" }}<!---->
 
 <!-- social_list -->
-{{ $social_params := slice "twitter" "mastodon" "github" "instagram" "mail" "rss" }}<!---->
-{{ range $social_params }}<!---->
-{{ if isset site.Params . }}<!---->
-{{ $.Scratch.Add "social_list" (slice .) }}<!---->
-{{ end }}<!---->
-{{ end }}<!---->
-
-<!-- avatar_url -->
-{{ if site.Params.avatar }}<!---->
-{{ if in site.Params.avatar "http" }}<!---->
-{{ $.Scratch.Set "avatar_url" site.Params.avatar }}<!---->
-{{ else }}<!---->
-{{ $md5 := (md5 site.Params.avatar) }}<!---->
-{{ $url := print "https://www.gravatar.com/avatar/" $md5 "?s=160&d=identicon" }}<!---->
-{{ $.Scratch.Set "avatar_url" $url }}<!---->
-{{ end }}<!---->
-{{ end }}<!---->
+{{- $social_params := slice "twitter" "mastodon" "github" "instagram" "mail" "rss" }}<!---->
+{{- range $social_params }}<!---->
+{{- if isset site.Params . }}<!---->
+{{- $.Scratch.Add "social_list" (slice .) }}<!---->
+{{- end -}}<!---->
+{{- end -}}<!---->
 
 <html lang="{{ site.LanguageCode }}" >
   {{ partial "head.html" . }}
