--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -342,6 +342,20 @@ figure > object {
   max-width: 100%;
 }
 
+figure .container-svg {
+  margin: 0 auto;
+  max-width: 100%;
+  position: relative;
+}
+
+figure .container-svg > object {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 figure > figcaption {
   font-style: italic;
 }
